--- a/package.json
+++ b/package.json
@@ -7,6 +7,20 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.4",
-    "prop-types": "15.6.1"
+    "prop-types": "15.6.1",
+    "native-base": "^2.11.0",
+    "react-native-elements": "^1.1.0",
+    "react-native-gesture-handler": "^1.0.17",
+    "react-navigation": "^3.3.2"
+  },
+  "devDependencies": {
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "24.1.0",
+    "jest": "24.1.0",
+    "metro-react-native-babel-preset": "0.51.1",
+    "react-test-renderer": "16.6.3"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
